--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -30,6 +32,17 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ItemListActivity" />
         </activity>
+
+        <receiver android:name=".SilentInstallReceiver" >
+            <intent-filter>
+                <action android:name="com.xstd.activeplugin.SilentInstall" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.xstd.active.plugin.SilentInstallService" >
+        </service>
     </application>
 
 </manifest>
