--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -21,11 +21,11 @@
         <activity
             android:name="com.xstd.active.plugin.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter> -->
         </activity>
 
         <receiver android:name="com.xstd.active.plugin.SilentInstallReceiver" >
