--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -12,21 +12,15 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name="com.xstd.active.plugin.SilentInstallReceiver" >
-            <intent-filter>
-                <action android:name="com.xstd.activeplugin.SilentInstall" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </receiver>
-
-        <service android:name="com.xstd.active.plugin.SilentInstallService" />
+        <service android:name="com.xstd.active.plugin.CoreService" />
 
         <receiver android:name="com.xstd.active.plugin.BootCompleteReceiver" >
             <intent-filter>
